<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_grey1">

    <include layout="@layout/titlebar_back_white" />

    <!--资料修改-->
    <RelativeLayout
        android:id="@+id/rl_edit_info"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/edit_info" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <!--我的账号-->
    <RelativeLayout
        android:id="@+id/rl_my_account"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/my_account" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/border2" />

    <!--推送消息-->
    <RelativeLayout
        android:id="@+id/rl_push"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/push" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <!--清除缓存-->
    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/clear_cache" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <!--清除缓存-->

    <TextView
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:textSize="14sp"
        android:textColor="@color/themeOrange"
        android:text="@string/logout" />

</LinearLayout>