<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_grey1">

    <include layout="@layout/titlebar"/>

    <!--用户条-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/white"
        >
        <com.meishipintu.lll_office.customs.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_head"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/text_black2"
            android:text="用户名sdflj"
            />

        <TextView
            android:id="@+id/tv_user_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_name"
            android:layout_below="@id/tv_user_name"
            android:layout_marginTop="8dp"
            android:textSize="10sp"
            android:textColor="@color/edit_text_color"
            android:text="普通用户"
        />

        <TextView
            android:id="@+id/tv_times_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_name"
            android:layout_below="@id/tv_user_level"
            android:layout_marginTop="8dp"
            android:textSize="10sp"
            android:textColor="@color/edit_text_color"
            android:text="剩余邀约次数：5次"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_half_circle_orange">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/icon_update"
                android:layout_gravity="center_vertical"
                android:padding="2dp"
                android:background="@drawable/shape_circle_white"
                android:layout_marginLeft="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:text="升级账号"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </RelativeLayout>

    <!--我的简历-->
    <RelativeLayout
        android:id="@+id/rl_job_manage"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin12"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_job_manage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:layout_centerVertical="true"
            android:text="@string/job_manage"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_next"
            android:layout_marginRight="13dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12.5dp"
            android:background="@color/border2"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <!--我的面试-->
    <RelativeLayout
        android:id="@+id/rl_my_interview"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_record"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/my_interview"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_next"
            android:layout_marginRight="13dp"/>
    </RelativeLayout>

    <!--我的收藏-->
    <RelativeLayout
        android:id="@+id/rl_my_collection"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_like_grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black2"
            android:text="@string/my_collection"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dp"
            android:src="@drawable/icon_next"/>

    </RelativeLayout>

    <!--其他机构-->
    <RelativeLayout
        android:id="@+id/rl_other_office"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_organization"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black2"
            android:text="@string/other_office"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dp"
            android:src="@drawable/icon_next"/>
    </RelativeLayout>

    <!--消息中心-->
    <RelativeLayout
        android:id="@+id/rl_notice_center"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_notice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black2"
            android:text="@string/notice_center"
            />
        <ImageView
            android:id="@+id/iv_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:src="@drawable/icon_next"/>

        <View
            android:id="@+id/red_point"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:background="@drawable/shape_red_point"
            android:layout_alignRight="@id/iv_news"
            android:layout_alignTop="@id/iv_news"
            android:visibility="gone"
            />
    </RelativeLayout>

    <!--设置过-->
    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin12"
            android:src="@drawable/icon_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:textSize="14sp"
            android:textColor="@color/text_black2"
            android:text="@string/setting"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_next"
            android:layout_marginRight="13dp"/>
    </RelativeLayout>

</LinearLayout>