<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_grey1"
    android:layout_alignBottom="@+id/tv_times_remain"
    android:layout_toStartOf="@+id/tv_user_name">
    <include layout="@layout/titlebar_back_white" android:id="@+id/titlebar"/>

    <LinearLayout
        android:id="@+id/component3"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_back_border2">

            <TextView
                android:id="@+id/component2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:textColor="@color/text_black1"
                android:text="总价 "/>
            <TextView
                android:id="@+id/tv_money"
                android:layout_toRightOf="@id/component2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:textColor="@color/themeOrange"
                android:text="¥ 400.00"/>
        </RelativeLayout>
        <Button
            android:id="@+id/bt_pay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/themeOrange"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="去支付"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titlebar"
        android:layout_above="@id/component3">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--机构名称-->
            <RelativeLayout
                android:id="@+id/rl_edit_info"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@color/text_black2"
                    android:text="@string/office_name" />

                <ImageView
                    android:src="@drawable/icon_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/themeOrange"
                    android:hint="请填写"
                    android:textColorHint="@color/themeOrange"
                    android:background="@null"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="26dp"
                    android:layout_centerVertical="true"
                    android:gravity="end"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="12dp"
                android:background="@color/border2" />

            <!-- 机构地址 -->
            <RelativeLayout
                android:id="@+id/rl_push"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:textSize="14sp"
                    android:textColor="@color/text_black2"
                    android:layout_centerVertical="true"
                    android:text="@string/office_address"
                    android:layout_marginTop="10dp"/>

                <ImageView
                    android:src="@drawable/icon_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/themeOrange"
                    android:hint="请填写"
                    android:textColorHint="@color/themeOrange"
                    android:background="@null"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="26dp"
                    android:layout_centerVertical="true"
                    android:gravity="end"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="12dp"
                android:background="@color/border2" />

            <!-- 联系人 -->
            <RelativeLayout
                android:id="@+id/rl_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:textSize="14sp"
                    android:textColor="@color/text_black2"
                    android:text="@string/contact_people"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:textSize="10sp"
                    android:textColor="@color/text_grey1"
                    android:text="@string/only_backend"
                    android:layout_below="@id/tv_2"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="4dp"/>

                <ImageView
                    android:src="@drawable/icon_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/et_contactor"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/themeOrange"
                    android:hint="请填写"
                    android:textColorHint="@color/themeOrange"
                    android:background="@null"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="26dp"
                    android:layout_centerVertical="true"
                    android:gravity="end"/>
            </RelativeLayout>


            <!-- 联系方式 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:textSize="14sp"
                    android:textColor="@color/text_black2"
                    android:text="@string/contact_way"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:textSize="10sp"
                    android:textColor="@color/text_grey1"
                    android:text="@string/only_backend"
                    android:layout_below="@id/tv_3"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="4dp"/>

                <ImageView
                    android:src="@drawable/icon_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/themeOrange"
                    android:hint="请填写"
                    android:textColorHint="@color/themeOrange"
                    android:background="@null"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="26dp"
                    android:layout_centerVertical="true"
                    android:gravity="end"/>
            </RelativeLayout>



            <!-- 机构介绍 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:background="@color/white"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/component1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginTop="11dp"
                    android:text="机构介绍"
                    android:textColor="@color/text_black2"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_intro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/component1"
                    android:padding="7dp"
                    android:textSize="10sp"
                    android:gravity="top"
                    android:maxLength="100"
                    android:textColor="@color/text_black2"
                    android:hint="用简单的话介绍机构概况,最多200个汉字"
                    android:textColorHint="@color/edit_text_color_grey"
                    android:background="@color/back_grey1"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"

                    />
            </RelativeLayout>

            <!-- 营业执照 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:textSize="14sp"
                    android:layout_marginTop="11dp"
                    android:textColor="@color/text_black2"
                    android:text="营业执照"
                    android:id="@+id/component4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="10sp"
                    android:textColor="@color/text_grey1"
                    android:text="@string/only_backend"
                    android:layout_toRightOf="@id/component4"
                    android:layout_alignBaseline="@id/component4" />

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_add"
                    android:scaleType="centerInside"
                    android:layout_below="@id/component4"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_add"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="22dp"
                    android:textSize="10sp"
                    android:textColor="@color/themeOrange"
                    android:text="上传证件"/>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

